# golang-analyzer-inline-bazel

./: .bazelrc  BUILD.bazel  LICENSE.md  README.md  WORKSPACE  go.mod  go.sum  nogo_config.json
.repository/: license.spdx
bazel/go/: deps.bzl
cmd/mytool/: BUILD.bazel  main.go
cmd/mytool/cmd/: BUILD.bazel  list.go  root.go  version.go
internal/aws/: BUILD.bazel  s3.go
internal/cobrago/: BUILD.bazel  storage.go
internal/console/: BUILD.bazel  print.go
tools/rstoragearg/: BUILD.bazel  rstoragearg.go  rstoragearg_test.go
