load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cobrago_commands",
    srcs = ["main.go"],
    importpath = "github.com/jrbeverly/golang-analyzer-inline-bazel/cmd/mytool",
    visibility = ["//visibility:private"],
    deps = ["//cmd/mytool/cmd"],
)

go_binary(
    name = "cobrago",
    embed = [":cobrago_commands"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "mytool_lib",
    srcs = ["main.go"],
    importpath = "github.com/jrbeverly/golang-analyzer-inline-bazel/cmd/mytool",
    visibility = ["//visibility:private"],
    deps = ["//cmd/mytool/cmd"],
)
