load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "go_tool_library",
    srcs = ["rstoragearg.go"],
    importpath = "github.com/jrbeverly/golang-analyzer-inline-bazel/tools/rstoragearg",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/inspect:go_tool_library",
        "@org_golang_x_tools//go/ast/inspector:go_tool_library",
    ],
)